# BUAA-SysY-Compiler

./: AGENTS.md  CMakeLists.txt  README.md  ans.txt  io.c  myCompiler.sh  testfile.txt
docs/: compiler-optimizations.md  grammar.md  ir-generation.md  lexer.md  llvm-value.md  parser.md  semantic.md
docs/design-docs/: 00_reference_compiler.md  01_overall_design.md  02_lexical_design.md  03_syntax_design.md  04_semantic_design.md  05_codegen_design.md  06_opt_design.md  final.md
src/: CMakeLists.txt  logger.h  main.cpp
src/frontend/: CMakeLists.txt  lexer.cpp  parser.cpp  visitor.cpp
src/frontend/include/: ast.h  ebnf.h  error.h  grammar.h  lexer.h  parser.h  symtable.h  token.h  visitor.h
src/llvm/: AsmPrinter.cpp  AsmWriter.cpp  BasicBlock.cpp  CMakeLists.txt  MipsPrinter.cpp  Module.cpp  PassManager.cpp  Use.cpp  Value.cpp
src/llvm/include/asm/: AsmPrinter.h  AsmWriter.h  MipsPrinter.h
src/llvm/include/ir/: HasParent.h  IrForward.h  irForward.h  llvmContext.h  module.h  type.h
src/llvm/include/ir/pass/: PassManager.h
src/llvm/include/ir/value/: Argument.h  BasicBlock.h  Constant.h  ConstantArray.h  ConstantData.h  ConstantInt.h  Function.h  GlobalValue.h  GlobalVariable.h  Use.h  User.h  Value.h
src/llvm/include/ir/value/inst/: BinaryInstruction.h  Instruction.h  UnaryInstruction.h
src/llvm/src/: Function.cpp  Instruction.cpp  LlvmContext.cpp
test/: lexer-test.sh  output1.txt  testfile5.txt  testfile6.txt
test/myTestcase/: output4.txt  testfile1.txt  testfile2.txt  testfile3.txt  testfile4.txt
